objects/AFSC__FSScanResultCacheItem__c.object
<CustomObject>
    <description>F-Secure Cloud Protection: Recent scan result cache</description>
    <fields>
        <fullName>AFSC__File_Prevalence__c</fullName>
        <label>File Prevalence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AFSC__File_Reputation_Rating__c</fullName>
        <label>File Reputation Rating</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AFSC__Infection_Name__c</fullName>
        <label>Infection Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AFSC__Scan_Result__c</fullName>
        <label>Scan Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AFSC__Sha1__c</fullName>
        <externalId>true</externalId>
        <label>Sha1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AFSC__Verdict__c</fullName>
        <label>Verdict</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unsafe</fullName>
                </value>
                <value>
                    <fullName>Safe</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Scan Result Cache Item</label>
    <listViews>
        <fullName>AFSC__All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>AFSC__Scan_Result__c</columns>
        <columns>AFSC__Sha1__c</columns>
        <columns>AFSC__Verdict__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scan Result Cache Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>